split operations into two functions in train.py

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
     "data_dir": [
-        "/home/fin/data"
+        "/home/fin/data",
+        "/home/gavin/Documents/ndsb"
     ],
     "classes": [
         "acantharia_protist",
