--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ignore the data directory
+data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -53,5 +56,5 @@ docs/_build/
 # PyBuilder
 target/
 
-# ignore the data directory
-data
+# ignore gedit temp files
+*~
