--- a/yaml_templates/default.yaml
+++ b/yaml_templates/default.yaml
@@ -77,7 +77,7 @@
     extensions:
         [ !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: 'valid_y_misclass',
-             save_path: "./convolutional_network_best.pkl"
+             save_path: %(save_path)s
         }, !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
             start: 1,
             saturate: 10,
