--- a/yaml_templates/default.yaml
+++ b/yaml_templates/default.yaml
@@ -5,10 +5,11 @@
         training_set_mode: "train"
     },
     model: !obj:pylearn2.models.mlp.MLP {
-        batch_size: 100,
+        batch_size: 128,
         input_space: !obj:pylearn2.space.Conv2DSpace {
             shape: %(final_shape)s,
-            num_channels: 1
+            num_channels: 1,
+            axes: ['c', 0, 1, 'b'],
         },
         layers: [ !obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: 'h2',
