--- a/yaml_templates/default.yaml
+++ b/yaml_templates/default.yaml
@@ -11,27 +11,45 @@
             num_channels: 1,
             axes: ['c', 0, 1, 'b'],
         },
-        layers: [ !obj:pylearn2.models.mlp.ConvRectifiedLinear {
+        layers: [
+                 !obj:pylearn2.models.maxout.MaxoutConvC01B {
+                     layer_name: 'h0',
+                     pad: 0,
+                     num_channels: 48,
+                     num_pieces: 2,
+                     kernel_shape: [8, 8],
+                     pool_shape: [4, 4],
+                     pool_stride: [2, 2],
+                     irange: .005,
+                     max_kernel_norm: .9,
+                 },
+                 !obj:pylearn2.models.maxout.MaxoutConvC01B {
+                     layer_name: 'h1',
+                     pad: 3,
+                     num_channels: 48,
+                     num_pieces: 2,
+                     kernel_shape: [8, 8],
+                     pool_shape: [4, 4],
+                     pool_stride: [2, 2],
+                     irange: .005,
+                     max_kernel_norm: 1.9365,
+                 },
+                 !obj:pylearn2.models.maxout.MaxoutConvC01B {
+                     pad: 3,
                      layer_name: 'h2',
-                     output_channels: 64,
-                     irange: .05,
+                     num_channels: 24,
+                     num_pieces: 4,
                      kernel_shape: [5, 5],
-                     pool_shape: [4, 4],
+                     pool_shape: [2, 2],
                      pool_stride: [2, 2],
-                     max_kernel_norm: 1.9365
-                 }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                     layer_name: 'h3',
-                     output_channels: 64,
-                     irange: .05,
-                     kernel_shape: [5, 5],
-                     pool_shape: [4, 4],
-                     pool_stride: [2, 2],
-                     max_kernel_norm: 1.9365
-                 }, !obj:pylearn2.models.mlp.Softmax {
+                     irange: .005,
+                     max_kernel_norm: 1.9365,
+                 },
+                 !obj:pylearn2.models.mlp.Softmax {
                      max_col_norm: 1.9365,
                      layer_name: 'y',
-                     n_classes: %(n_classes)s,
-                     istdev: .05
+                     n_classes: 10,
+                     irange: .005
                  }
                 ],
     },
