--- a/yaml_templates/default.yaml
+++ b/yaml_templates/default.yaml
@@ -48,7 +48,7 @@
                  !obj:pylearn2.models.mlp.Softmax {
                      max_col_norm: 1.9365,
                      layer_name: 'y',
-                     n_classes: 10,
+                     n_classes: %(n_classes)s,
                      irange: .005
                  }
                 ],
