new run settings and yaml templates

--- a/yaml_templates/deep_test.yaml
+++ b/yaml_templates/deep_test.yaml
@@ -14,7 +14,10 @@
         layers: [
                  !obj:pylearn2.models.maxout.MaxoutConvC01B {
                      layer_name: 'h0',
-                     pad: 0,
+                     pad: 4,
+                     tied_b: 1,
+                     W_lr_scale: .05,
+                     b_lr_scale: .05,
                      num_channels: 96,
                      num_pieces: 2,
                      kernel_shape: [8, 8],
@@ -22,28 +25,58 @@
                      pool_stride: [2, 2],
                      irange: .005,
                      max_kernel_norm: .9,
+                     partial_sum: 33,
                  },
                  !obj:pylearn2.models.maxout.MaxoutConvC01B {
                      layer_name: 'h1',
                      pad: 3,
-                     num_channels: 96,
+                     tied_b: 1,
+                     W_lr_scale: .05,
+                     b_lr_scale: .05,
+                     num_channels: 192,
                      num_pieces: 2,
                      kernel_shape: [8, 8],
                      pool_shape: [4, 4],
                      pool_stride: [2, 2],
                      irange: .005,
                      max_kernel_norm: 1.9365,
+                     partial_sum: 15,
+                 },
+                 !obj:pylearn2.models.maxout.MaxoutConvC01B {
+                     layer_name: 'h2',
+                     pad: 3,
+                     tied_b: 1,
+                     W_lr_scale: .05,
+                     b_lr_scale: .05,
+                     num_channels: 192,
+                     num_pieces: 2,
+                     kernel_shape: [8, 8],
+                     pool_shape: [4, 4],
+                     pool_stride: [2, 2],
+                     irange: .005,
+                     max_kernel_norm: 1.9365,
+                     partial_sum: 15,
                  },
                  !obj:pylearn2.models.maxout.MaxoutConvC01B {
                      pad: 3,
-                     layer_name: 'h2',
-                     num_channels: 48,
-                     num_pieces: 4,
+                     layer_name: 'h3',
+                     tied_b: 1,
+                     W_lr_scale: .05,
+                     b_lr_scale: .05,
+                     num_channels: 192,
+                     num_pieces: 2,
                      kernel_shape: [5, 5],
                      pool_shape: [2, 2],
                      pool_stride: [2, 2],
                      irange: .005,
                      max_kernel_norm: 1.9365,
+                 },
+                 !obj:pylearn2.models.maxout.Maxout {
+                    layer_name: 'h4',
+                    irange: .005,
+                    num_units: 500,
+                    num_pieces: 5,
+                    max_col_norm: 1.9
                  },
                  !obj:pylearn2.models.mlp.Softmax {
                      max_col_norm: 1.9365,
