--- a/yaml_templates/alexnet_based_deeper.yaml
+++ b/yaml_templates/alexnet_based_deeper.yaml
@@ -13,7 +13,7 @@
         },
         layers: [ !obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: h1,
-                     output_channels: 48,
+                     output_channels: 128,
                      irange: .025,
                      init_bias: 0,
                      kernel_shape: [8, 8],
@@ -22,7 +22,7 @@
                      max_kernel_norm: 1.9365
                  },!obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: h2,
-                     output_channels: 96,
+                     output_channels: 288,
                      irange: .025,
                      init_bias: 1,
                      kernel_shape: [5, 5],
@@ -31,7 +31,7 @@
                      max_kernel_norm: 1.9365
                  }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: h3,
-                     output_channels: 128,
+                     output_channels: 384,
                      irange: .025,
                      init_bias: 0,
                      kernel_shape: [3, 3],
@@ -39,9 +39,19 @@
                      pool_shape: [1, 1],
                      pool_stride: [1, 1],
                      max_kernel_norm: 1.9365
-                 }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                     layer_name: 'h4',
-                     output_channels: 128,
+                 },  !obj:pylearn2.models.mlp.ConvRectifiedLinear {
+                     layer_name: h4,
+                     output_channels: 384,
+                     irange: .025,
+                     init_bias: 0,
+                     kernel_shape: [3, 3],
+                     border_mode: full,
+                     pool_shape: [1, 1],
+                     pool_stride: [1, 1],
+                     max_kernel_norm: 1.9365
+                 , !obj:pylearn2.models.mlp.ConvRectifiedLinear {
+                     layer_name: 'h5',
+                     output_channels: 384,
                      irange: .025,
                      init_bias: 1,
                      kernel_shape: [3, 3],
@@ -50,9 +60,9 @@
                      pool_stride: [2, 2],
                      max_kernel_norm: 1.9365
                  }, !obj:pylearn2.models.mlp.RectifiedLinear {
-                     dim: 1024,
+                     dim: 2048,
                      max_col_norm: 1.9,
-                     layer_name: h5,
+                     layer_name: h6,
                      istdev: .05,
                      W_lr_scale: .25,
                      b_lr_scale: .25
@@ -89,14 +99,16 @@
                     h2 : 1.,
                     h3 : 1.,
                     h4 : 1.,
-                    h5 : 0.5
+                    h5 : 1.,
+                    h6 : 0.5
                 },
                 input_scales: {
                     h1 : 1.,
                     h2 : 1.,
                     h3 : 1.,
                     h4 : 1.,
-                    h5 : 2.
+                    h5 : 1.,
+                    h6 : 2.
                 }
              },
              !obj:pylearn2.costs.mlp.WeightDecay {
@@ -105,7 +117,8 @@
                      h2 : .00005,
                      h3 : .00005,
                      h4 : .00005,
-                     h5 : .00005
+                     h5 : .00005,
+                     h6 : .00005
                  }
              }
              ]
