added notebook for keypoint detection (for issue #97)

--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
     "data_dir": [
         "/home/fin/data",
         "/home/gavin/Documents/ndsb",
+        "/media/dragos/6c25c80a-cce2-4fc8-97ae-fdc11725c266/Projects/Neuroglycerine/NDSB/neukrill-net-work/data",
         "data",
         "/disk/data2/neuroglycerin/neukrill-data/",
         "/disk/scratch/neuroglycerin"
