--- a/yaml_templates/alexnet_based_deeper.yaml
+++ b/yaml_templates/alexnet_based_deeper.yaml
@@ -5,7 +5,7 @@
         training_set_mode: "train"
     },
     model: !obj:pylearn2.models.mlp.MLP {
-        batch_size: &batch_size 128,
+        batch_size: &batch_size %(batch_size)s,
         input_space: !obj:pylearn2.space.Conv2DSpace {
             shape: %(final_shape)s,
             num_channels: 1,
@@ -49,7 +49,7 @@
                      pool_shape: [1, 1],
                      pool_stride: [1, 1],
                      max_kernel_norm: 1.9365
-                 , !obj:pylearn2.models.mlp.ConvRectifiedLinear {
+                 }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: 'h5',
                      output_channels: 384,
                      irange: .025,
