--- a/yaml_templates/cifar10.yaml
+++ b/yaml_templates/cifar10.yaml
@@ -1,8 +1,8 @@
 !obj:pylearn2.train.Train {
     dataset: &train !obj:neukrill_net.dense_dataset.DensePNGDataset {
-			settings_path: %(settings_path)s,
-			run_settings: %(run_settings_path)s,
-			training_set_mode: "train",
+            settings_path: %(settings_path)s,
+            run_settings: %(run_settings_path)s,
+            training_set_mode: "train"
     },
     model: !obj:pylearn2.models.mlp.MLP {
         batch_size: &batch_size 128,
@@ -20,7 +20,7 @@
                      pool_stride: [2, 2],
                      irange: .005,
                      max_kernel_norm: .9,
-                     partial_sum: 33,
+                     partial_sum: 49
                  },
                  !obj:pylearn2.models.maxout.MaxoutConvC01B {
                      layer_name: 'h1',
@@ -35,7 +35,7 @@
                      pool_stride: [2, 2],
                      irange: .005,
                      max_kernel_norm: 1.9365,
-                     partial_sum: 15,
+                     partial_sum: 23
                  },
                  !obj:pylearn2.models.maxout.MaxoutConvC01B {
                      pad: 3,
@@ -49,7 +49,7 @@
                      pool_shape: [2, 2],
                      pool_stride: [2, 2],
                      irange: .005,
-                     max_kernel_norm: 1.9365,
+                     max_kernel_norm: 1.9365
                  },
                  !obj:pylearn2.models.maxout.Maxout {
                     layer_name: 'h3',
@@ -66,10 +66,10 @@
                  }
                 ],
         input_space: !obj:pylearn2.space.Conv2DSpace {
-            shape: &window_shape [32, 32],
-            num_channels: 3,
-            axes: ['c', 0, 1, 'b'],
-        },
+            shape: %(final_shape)s,
+            num_channels: 1,
+            axes: ['c', 0, 1, 'b']
+        }
     },
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
         learning_rate: .17,
@@ -84,7 +84,7 @@
                                 settings_path: %(settings_path)s,
                                 run_settings: %(run_settings_path)s,
                                 training_set_mode: "test"
-				},
+                }
             },
         cost: !obj:pylearn2.costs.mlp.dropout.Dropout {
             input_include_probs: { 'h0' : .8 },
@@ -92,7 +92,7 @@
         },
         termination_criterion: !obj:pylearn2.termination_criteria.EpochCounter {
             max_epochs: 474 
-        },
+        }
     },
     extensions: [
         !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
@@ -105,9 +105,9 @@
             saturate: 500,
             decay_factor: .01
         },
-		!obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
-        	channel_name: valid_y_misclass,
-        	save_path: '%(save_path)s'
-		},
-    ],
+        !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
+            channel_name: test_y_misclass,
+            save_path: '%(save_path)s'
+        }
+    ]
 }
