--- a/yaml_templates/alexnet_learning_rate.yaml
+++ b/yaml_templates/alexnet_learning_rate.yaml
@@ -130,7 +130,7 @@
             decay_factor: 0.025
         },
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
-             channel_name: valid_y_misclass,
+             channel_name: valid_y_nll,
              save_path: '%(save_path)s'
         },
         !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
