--- a/yaml_templates/albased_varlrate.yaml
+++ b/yaml_templates/albased_varlrate.yaml
@@ -2,15 +2,10 @@
     dataset: &train !obj:neukrill_net.image_directory_dataset.ListDataset {
         transformer: !obj:neukrill_net.augment.RandomAugment {
                 units: 'float',
-                rotate: %(rotate)s,
-                rotate_is_resizable: %(rotate_is_resizable)s,
-                flip: %(flip)s,
-                resize: %(final_shape)s,
-                scale: %(scale)s,
-                scale_asym: %(scale_asym)s,
-                shunt: %(shunt)s,
-                shear: %(shear)s,
-                noise: %(noise)s
+                rotate: -1,
+                rotate_is_resizable: 0,
+                flip: 1,
+                resize: %(final_shape)s
             },
         settings_path: %(settings_path)s,
         run_settings_path: %(run_settings_path)s
@@ -132,12 +127,12 @@
     extensions: [
         !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
             start: 1,
-            saturate: 200,
+            saturate: 250,
             final_momentum: 0.95
         },
         !obj:pylearn2.training_algorithms.sgd.LinearDecayOverEpoch {
             start: 1,
-            saturate: 200,
+            saturate: 250,
             decay_factor: 0.025
         },
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
@@ -147,13 +142,11 @@
         !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
             high_trigger: 1.,
             low_trigger: 0.999,
-            grow_amt: 1.012,
-            shrink_amt: 0.986,
-            max_lr: 0.4,
+            grow_amt: 1.02,
+            shrink_amt: 0.98,
+            max_lr: 0.1,
             min_lr: 1e-5,
             channel_name: valid_y_misclass
         }
     ],
-    save_path: '%(alt_picklepath)s',
-    save_freq: 1
 }
