--- a/yaml_templates/listdataset_base.yaml
+++ b/yaml_templates/listdataset_base.yaml
@@ -86,11 +86,23 @@
         },
         monitoring_dataset: {
                 'train': *train,
-                'valid' : !obj:neukrill_net.dense_dataset.DensePNGDataset  {
-                                settings_path: %(settings_path)s,
-                                run_settings: %(run_settings_path)s,
-                                training_set_mode: "validation"
-            },
+                'valid' : !obj:neukrill_net.image_directory_dataset.ListDataset {
+                            transformer: !obj:neukrill_net.augment.RandomAugment {
+                            units: 'float',
+                            rotate: %(rotate)s,
+                            rotate_is_resizable: %(rotate_is_resizable)s,
+                            flip: %(flip)s,
+                            resize: %(final_shape)s,
+                            scale: %(scale)s,
+                            scale_asym: %(scale_asym)s,
+                            shunt: %(shunt)s,
+                            noise: %(noise)s
+                        },
+                    settings_path: %(settings_path)s,
+                    run_settings_path: %(run_settings_path)s,
+                    training_set_mode: "validation"
+                }
+
         },
         cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [ 
             !obj:pylearn2.costs.mlp.dropout.Dropout {
