--- a/yaml_templates/replicate_8aug_online.yaml
+++ b/yaml_templates/replicate_8aug_online.yaml
@@ -84,15 +84,11 @@
                 'train': *train,
                 'valid' : !obj:neukrill_net.image_directory_dataset.ListDataset {
                             transformer: !obj:neukrill_net.augment.RandomAugment {
-                            units: 'float',
-                            rotate: %(rotate)s,
-                            rotate_is_resizable: %(rotate_is_resizable)s,
-                            flip: %(flip)s,
-                            resize: %(final_shape)s,
-                            scale: %(scale)s,
-                            scale_asym: %(scale_asym)s,
-                            shunt: %(shunt)s,
-                            noise: %(noise)s
+                                units: 'float',
+                                rotate: [0,90,180,270],
+                                rotate_is_resizable: 0,
+                                flip: 1,
+                                resize: %(final_shape)s
                         },
                     settings_path: %(settings_path)s,
                     run_settings_path: %(run_settings_path)s,
