--- a/yaml_templates/replicate_8aug_online.yaml
+++ b/yaml_templates/replicate_8aug_online.yaml
@@ -5,7 +5,9 @@
                 rotate: [0,90,180,270],
                 rotate_is_resizable: 0,
                 flip: 1,
-                resize: %(final_shape)s
+                resize: %(final_shape)s,
+                normalise: {mu: %(mu)s,
+                            sigma: %(sigma)s}
             },
         settings_path: %(settings_path)s,
         run_settings_path: %(run_settings_path)s
