--- a/yaml_templates/alexnet_based_flatlr.yaml
+++ b/yaml_templates/alexnet_based_flatlr.yaml
@@ -1,24 +1,15 @@
 !obj:pylearn2.train.Train {
-    dataset: &train !obj:neukrill_net.image_directory_dataset.ListDataset {
-        transformer: !obj:neukrill_net.augment.RandomAugment {
-                units: 'float',
-                rotate: [0,90,180,270],
-                rotate_is_resizable: 0,
-                flip: 1,
-                resize: %(final_shape)s,
-                normalise: {global_or_pixel: 'global',
-                            mu: %(mu)s,
-                            sigma: %(sigma)s}
-            },
+    dataset: &train !obj:neukrill_net.dense_dataset.DensePNGDataset {
         settings_path: %(settings_path)s,
-        run_settings_path: %(run_settings_path)s
+        run_settings: %(run_settings_path)s,
+        training_set_mode: "train"
     },
     model: !obj:pylearn2.models.mlp.MLP {
         batch_size: &batch_size 128,
         input_space: !obj:pylearn2.space.Conv2DSpace {
             shape: %(final_shape)s,
             num_channels: 1,
-            axes: ['b', 0, 1, 'c'],
+            axes: ['c', 0, 1, 'b'],
         },
         layers: [ !obj:pylearn2.models.mlp.ConvRectifiedLinear {
                      layer_name: h1,
@@ -79,24 +70,17 @@
         train_iteration_mode: even_shuffled_sequential,
         monitor_iteration_mode: even_sequential,
         batch_size: *batch_size,
-        learning_rate: .1,
+        learning_rate: %(learning_rate)f,
         learning_rule: !obj:pylearn2.training_algorithms.learning_rule.Momentum {
             init_momentum: 0.5
         },
         monitoring_dataset: {
                 'train': *train,
-                'valid' : !obj:neukrill_net.image_directory_dataset.ListDataset {
-                            transformer: !obj:neukrill_net.augment.RandomAugment {
-                                units: 'float',
-                                rotate: [0,90,180,270],
-                                rotate_is_resizable: 0,
-                                flip: 1,
-                                resize: %(final_shape)s
-                        },
-                    settings_path: %(settings_path)s,
-                    run_settings_path: %(run_settings_path)s,
-                    training_set_mode: "validation"
-                }
+                'valid' : !obj:neukrill_net.dense_dataset.DensePNGDataset  {
+                                settings_path: %(settings_path)s,
+                                run_settings: %(run_settings_path)s,
+                                training_set_mode: "validation"
+            },
         },
         cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [ 
             !obj:pylearn2.costs.mlp.dropout.Dropout {
@@ -135,29 +119,11 @@
         }
     },
     extensions: [
-        !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
-            start: 1,
-            saturate: 200,
-            final_momentum: 0.95
-        },
-        !obj:pylearn2.training_algorithms.sgd.LinearDecayOverEpoch {
-            start: 1,
-            saturate: 200,
-            decay_factor: 0.025
-        },
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
              channel_name: valid_y_misclass,
              save_path: '%(save_path)s'
-        },
-        !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
-            high_trigger: 1.,
-            low_trigger: 0.999,
-            grow_amt: 1.012,
-            shrink_amt: 0.986,
-            max_lr: 0.4,
-            min_lr: 1e-5,
-            channel_name: valid_y_misclass
         }
+
     ],
     save_path: '%(alt_picklepath)s',
     save_freq: 1
