--- a/yaml_templates/replicate_alexnet_based.yaml
+++ b/yaml_templates/replicate_alexnet_based.yaml
@@ -2,13 +2,10 @@
     dataset: &train !obj:neukrill_net.image_directory_dataset.ListDataset {
         transformer: !obj:neukrill_net.augment.RandomAugment {
                 units: 'float',
-                rotate: [0,90,180,270],
-                rotate_is_resizable: 0,
-                flip: 1,
                 resize: %(final_shape)s,
                 normalise: {global_or_pixel: 'global',
-                            mu: %(mu)s,
-                            sigma: %(sigma)s}
+                            mu: %(mu)f,
+                            sigma: %(sigma)f}
             },
         settings_path: %(settings_path)s,
         run_settings_path: %(run_settings_path)s
@@ -88,9 +85,6 @@
                 'valid' : !obj:neukrill_net.image_directory_dataset.ListDataset {
                             transformer: !obj:neukrill_net.augment.RandomAugment {
                                 units: 'float',
-                                rotate: [0,90,180,270],
-                                rotate_is_resizable: 0,
-                                flip: 1,
                                 resize: %(final_shape)s
                         },
                     settings_path: %(settings_path)s,
@@ -137,12 +131,12 @@
     extensions: [
         !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
             start: 1,
-            saturate: 200,
+            saturate: 25,
             final_momentum: 0.95
         },
         !obj:pylearn2.training_algorithms.sgd.LinearDecayOverEpoch {
             start: 1,
-            saturate: 200,
+            saturate: 25,
             decay_factor: 0.025
         },
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
@@ -152,8 +146,8 @@
         !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
             high_trigger: 1.,
             low_trigger: 0.999,
-            grow_amt: 1.012,
-            shrink_amt: 0.986,
+            grow_amt: 1.1,
+            shrink_amt: 0.9,
             max_lr: 0.4,
             min_lr: 1e-5,
             channel_name: valid_y_misclass
