--- a/yaml_templates/replicate_8aug_transformer.yaml
+++ b/yaml_templates/replicate_8aug_transformer.yaml
@@ -1,17 +1,24 @@
 !obj:pylearn2.train.Train {
-    dataset: &train !obj:neukrill_net.image_directory_dataset.ListDataset {
-        transformer: !obj:neukrill_net.augment.RandomAugment {
+    dataset: &train !obj:pylearn2.datasets.transformer_dataset.TransformerDataset {
+        space_preserving: True,
+        raw:  !obj:neukrill_net.dense_dataset.DensePNGDataset {
+            settings_path: %(settings_path)s,
+            run_settings: %(run_settings_path)s,
+            training_set_mode: "train"
+        },
+        transformer: !obj:neukrill_net.blocks.SampleAugment {
+            fn: !obj:neukrill_net.augment.RandomAugment {
                 units: 'float',
-                rotate: [0,90,180,270],
+                rotate: 4,
                 rotate_is_resizable: 0,
                 flip: 1,
                 resize: %(final_shape)s,
-                normalise: {global_or_pixel: 'global',
-                            mu: %(mu)s,
-                            sigma: %(sigma)s}
+                normalise: {"mu": %(mu)s, 
+                            "sigma": %(sigma)s}
             },
-        settings_path: %(settings_path)s,
-        run_settings_path: %(run_settings_path)s
+            target_shape: %(final_shape)s,
+            input_shape: %(final_shape)s
+        }
     },
     model: !obj:pylearn2.models.mlp.MLP {
         batch_size: &batch_size 128,
@@ -85,21 +92,11 @@
         },
         monitoring_dataset: {
                 'train': *train,
-                'valid' : !obj:neukrill_net.image_directory_dataset.ListDataset {
-                            transformer: !obj:neukrill_net.augment.RandomAugment {
-                                units: 'float',
-                                rotate: [0,90,180,270],
-                                rotate_is_resizable: 0,
-                                flip: 1,
-                                resize: %(final_shape)s,
-                                normalise: {global_or_pixel: 'global',
-                                            mu: %(mu)s,
-                                            sigma: %(sigma)s}
-                        },
-                    settings_path: %(settings_path)s,
-                    run_settings_path: %(run_settings_path)s,
-                    training_set_mode: "validation"
-                }
+                'valid' : !obj:neukrill_net.dense_dataset.DensePNGDataset  {
+                                settings_path: %(settings_path)s,
+                                run_settings: %(run_settings_path)s,
+                                training_set_mode: "validation"
+            },
         },
         cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [ 
             !obj:pylearn2.costs.mlp.dropout.Dropout {
@@ -155,7 +152,7 @@
         !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
             high_trigger: 1.,
             low_trigger: 0.999,
-            grow_amt: 1.012,
+            grow_amt: 1.011,
             shrink_amt: 0.986,
             max_lr: 0.4,
             min_lr: 1e-5,
@@ -163,5 +160,5 @@
         }
     ],
     save_path: '%(alt_picklepath)s',
-    save_freq: 1
+    save_freq: 1   
 }
