Add manyaug yaml and AWS data server

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
     "data_dir": [
+        "/data",
         "/home/fin/data",
         "/home/gavin/Documents/ndsb",
         "/media/dragos/6c25c80a-cce2-4fc8-97ae-fdc11725c266/Projects/Neuroglycerine/NDSB/neukrill-net-work/data",
