--- a/yaml_templates/alexnet_based_extra_convlayer_with_superclasses.yaml
+++ b/yaml_templates/alexnet_based_extra_convlayer_with_superclasses.yaml
@@ -200,7 +200,7 @@
             shrink_amt: 0.9,
             max_lr: 0.2,
             min_lr: 1e-5,
-            channel_name: valid_y_misclass
+            channel_name: valid_y_y_1_misclass
         }
     ],
     save_path: '%(alt_picklepath)s',
