--- a/yaml_templates/parallel_conv.yaml
+++ b/yaml_templates/parallel_conv.yaml
@@ -21,10 +21,17 @@
     },
     model: !obj:pylearn2.models.mlp.MLP {
         batch_size: &batch_size 128,
-        input_space: !obj:pylearn2.space.Conv2DSpace {
-            shape: %(final_shape)s,
-            num_channels: 1,
-            axes: ['b', 0, 1, 'c'],
+        input_space: !obj:pylearn2.space.CompositeSpace {
+            components: [
+                !obj:pylearn2.space.Conv2DSpace {
+                    shape: %(final_shape)s,
+                    num_channels: 1,
+                    axes: ['b', 0, 1, 'c'],},
+                !obj:pylearn2.space.Conv2DSpace {
+                    shape: %(final_shape)s,
+                    num_channels: 1,
+                    axes: ['b', 0, 1, 'c'],}
+            ]
         },
         layers: [ !obj:pylearn2.models.mlp.FlattenerLayer {
                     raw_layer: !obj:pylearn2.models.mlp.CompositeLayer {
