--- a/yaml_templates/parallel_conv.yaml
+++ b/yaml_templates/parallel_conv.yaml
@@ -21,6 +21,7 @@
     },
     model: !obj:pylearn2.models.mlp.MLP {
         batch_size: &batch_size 128,
+        input_source: ['img_1','img_2'],
         input_space: !obj:pylearn2.space.CompositeSpace {
             components: [
                 !obj:pylearn2.space.Conv2DSpace {
