--- a/yaml_templates/online_manyaug_3conv1mlp.yaml
+++ b/yaml_templates/online_manyaug_3conv1mlp.yaml
@@ -146,7 +146,7 @@
             decay_factor: 0.025
         },
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
-             channel_name: valid_y_misclass,
+             channel_name: valid_y_nll,
              save_path: '%(save_path)s'
         },
         !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
@@ -156,7 +156,7 @@
             shrink_amt: 0.986,
             max_lr: 0.4,
             min_lr: 1e-5,
-            channel_name: valid_y_misclass
+            channel_name: valid_y_nll
         }
     ],
     save_path: '%(alt_picklepath)s',
