--- a/yaml_templates/quicker_learning_experiment.yaml
+++ b/yaml_templates/quicker_learning_experiment.yaml
@@ -202,11 +202,11 @@
         !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
             high_trigger: 1.,
             low_trigger: 0.999,
-            grow_amt: 1.012,
-            shrink_amt: 0.986,
+            grow_amt: 1.1,
+            shrink_amt: 0.9,
             max_lr: 1.,
             min_lr: 1e-5,
-            channel_name: valid_y_y_1_misclass
+            channel_name: valid_y_y_1_nll
         }
     ],
     save_path: '%(alt_picklepath)s',
