--- a/yaml_templates/learning_rate_experiment.yaml
+++ b/yaml_templates/learning_rate_experiment.yaml
@@ -112,7 +112,7 @@
         monitor_iteration_mode: even_sequential,
         batch_size: *batch_size,
         learning_rate: 0.05,
-        learning_rule: !obj.neukrill_net.update_norm_monitor.UpdateNormMonitorLearningRule {
+        learning_rule: !obj:neukrill_net.update_norm_monitor.UpdateNormMonitorLearningRule {
             base_learning_rule: !obj:pylearn2.training_algorithms.learning_rule.Momentum {
                 init_momentum: 0.5
             },
