--- a/yaml_templates/opencv_integrated_preloaded_mattbased_super.yaml
+++ b/yaml_templates/opencv_integrated_preloaded_mattbased_super.yaml
@@ -1,22 +1,12 @@
 !obj:pylearn2.train.Train {
-    dataset: &train !obj:neukrill_net.parallel_dataset.PassthroughDataset {
-        transformer: !obj:neukrill_net.augment.RandomAugment {
-                units: 'float',
-                rotate: [0,90,180,270],
-                rotate_is_resizable: 0,
-                flip: 1,
-                resize: %(final_shape)s,
-                normalise: {global_or_pixel: 'global',
-                            mu: %(mu)s,
-                            sigma: %(sigma)s}
-            },
+    dataset: &train !obj:neukrill_net.preloaded_passthrough_dataset.PreloadedPassthroughDataset {
         settings_path: %(settings_path)s,
         run_settings_path: %(run_settings_path)s,
         cached: %(cache)s,
-        #training_set_mode: 'test'
+        training_set_mode: 'test'
     },
     model: !obj:pylearn2.models.mlp.MLP {
-        batch_size: &batch_size 256,
+        batch_size: &batch_size 128,
         input_source: ['img_1','img_2'],
         input_space: !obj:pylearn2.space.CompositeSpace {
             components: [
@@ -38,55 +28,64 @@
                                 batch_size: *batch_size,
                                 layers: [
                                     !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                                     layer_name: h1,
-                                     output_channels: 64,
-                                     irange: 0.02,
-                                     kernel_shape: [7, 7],
-                                     pool_shape: [3, 3],
-                                     pool_stride: [2, 2],
-                                     b_lr_scale: 2.,
-                                     max_kernel_norm: 1.
-                                 },!obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                                     layer_name: h2,
-                                     output_channels: 64,
-                                     irange: 0.02,
-                                     kernel_shape: [4, 4],
-                                     pool_shape: [3, 3],
-                                     pool_stride: [2, 2],
-                                     border_mode: full,
-                                     b_lr_scale: 2.,
-                                     max_kernel_norm: 1.
-                                 }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
-                                     layer_name: h3,
-                                     output_channels: 64,
-                                     irange: 0.002,
-                                     kernel_shape: [3, 3],
-                                     pool_shape: [3, 3],
-                                     pool_stride: [2, 2],
-                                     border_mode: full,
-                                     b_lr_scale: 2.,
-                                     max_kernel_norm: 2.
-                                 }
-                            ]},    !obj:pylearn2.models.mlp.MLP {
+                                         layer_name: h1,
+                                         output_channels: 48,
+                                         irange: 0.05,
+                                         kernel_shape: [5, 5],
+                                         pool_shape: [3, 3],
+                                         pool_stride: [2, 2],
+                                         border_mode: full,
+                                         b_lr_scale: 2.,
+                                         max_kernel_norm: 1.
+                                     },!obj:pylearn2.models.mlp.ConvRectifiedLinear {
+                                         layer_name: h2,
+                                         output_channels: 48,
+                                         irange: 0.05,
+                                         kernel_shape: [3, 3],
+                                         pool_shape: [3, 3],
+                                         pool_stride: [2, 2],
+                                         border_mode: full,
+                                         b_lr_scale: 2.,
+                                         max_kernel_norm: 1.
+                                     }, !obj:pylearn2.models.mlp.ConvRectifiedLinear {
+                                         layer_name: h3,
+                                         output_channels: 48,
+                                         irange: 0.05,
+                                         kernel_shape: [3, 3],
+                                         pool_shape: [3, 3],
+                                         pool_stride: [2, 2],
+                                         border_mode: full,
+                                         b_lr_scale: 2.,
+                                         max_kernel_norm: 2.
+                                     }, !obj:pylearn2.models.mlp.RectifiedLinear {
+                                         dim: 512,
+                                         max_col_norm: 1.5,
+                                         layer_name: h5,
+                                         istdev: .005,
+                                         init_bias: 0,
+                                         b_lr_scale: 2.,
+                                     }, 
+                            ]},
+                            !obj:pylearn2.models.mlp.MLP {
                                 layer_name: passthrough,
                                 batch_size: *batch_size,
                                 layers: [ !obj:pylearn2.models.mlp.RectifiedLinear {
                                      dim: 128,
-                                     layer_name: h1p5,
-                                     istdev: .05,
-                                     max_col_norm: 0.5,
-                                     W_lr_scale: .25,
-                                     b_lr_scale: .25
-                                 }]}
+                                     max_col_norm: 0.7,
+                                     layer_name: h5,
+                                     istdev: .01,
+                                     init_bias: 0,
+                                     b_lr_scale: 2.,
+                                 }, ]}
                         ]}
                  },
                    !obj:pylearn2.models.mlp.RectifiedLinear {
-                     dim: 768,
-                     layer_name: h5,
+                     dim: 512,
                      max_col_norm: 1.5,
-                     istdev: .05,
-                     W_lr_scale: .25,
-                     b_lr_scale: .25
+                     layer_name: h5,
+                     istdev: .01,
+                     init_bias: 0,
+                     b_lr_scale: 2.,
                  }, !obj:pylearn2.models.mlp.Softmax {
                      n_classes: %(n_classes)i,
                      layer_name: y,
@@ -100,7 +99,7 @@
         train_iteration_mode: even_shuffled_sequential,
         monitor_iteration_mode: even_sequential,
         batch_size: *batch_size,
-        learning_rate: 0.1,
+        learning_rate: 0.05,
         learning_rule: !obj:neukrill_net.update_norm_monitor.UpdateNormMonitorLearningRule {
             base_learning_rule: !obj:pylearn2.training_algorithms.learning_rule.Momentum {
                 init_momentum: 0.25
@@ -109,23 +108,12 @@
         },
         monitoring_dataset: {
                 'train': *train,
-                'valid' : !obj:neukrill_net.parallel_dataset.PassthroughDataset {
-                transformer: !obj:neukrill_net.augment.RandomAugment {
-                        units: 'float',
-                        transform_order: 0,
-                        rotate: 0,
-                        rotate_is_resizable: 0,
-                        flip: 0,
-                        resize: %(final_shape)s,
-                        normalise: {global_or_pixel: 'global',
-                                    mu: %(mu)s,
-                                    sigma: %(sigma)s}
-                    },
-                settings_path: %(settings_path)s,
-                run_settings_path: %(run_settings_path)s,
-                cached: %(cache)s,
-                training_set_mode: 'validation'
-        }
+                'valid' : !obj:neukrill_net.preloaded_passthrough_dataset.PreloadedPassthroughDataset  {
+                                settings_path: %(settings_path)s,
+                                run_settings_path: %(run_settings_path)s,
+                                cached: %(cache)s,
+                                training_set_mode: "validation"
+                            },
         },
         cost: !obj:pylearn2.costs.cost.SumOfCosts { costs: [ 
             !obj:pylearn2.costs.mlp.dropout.Dropout {
@@ -160,13 +148,8 @@
             saturate: 200,
             final_momentum: 0.95
         },
-        !obj:pylearn2.training_algorithms.sgd.LinearDecayOverEpoch {
-            start: 1,
-            saturate: 200,
-            decay_factor: 0.025
-        },
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
-             channel_name: valid_y_nll,
+             channel_name: valid_y_y_1_nll,
              save_path: '%(save_path)s'
         },
         !obj:pylearn2.training_algorithms.sgd.MonitorBasedLRAdjuster {
@@ -176,7 +159,7 @@
             shrink_amt: 0.8,
             max_lr: 1.,
             min_lr: 1e-5,
-            channel_name: valid_y_nll
+            channel_name: valid_y_y_1_nll
         }
     ],
     save_path: '%(alt_picklepath)s',
